@@ -151,6 +151,7 @@ const std::string StateDatabase::BZDB_SHOTSPEED         = std::string("_shotSpee
 const std::string StateDatabase::BZDB_SHOTTAILLENGTH	= std::string("_shotTailLength");
 const std::string StateDatabase::BZDB_SHOTSKEEPVERTICALV= std::string("_shotsKeepVerticalVelocity");
 const std::string StateDatabase::BZDB_SRRADIUSMULT	= std::string("_srRadiusMult");
+const std::string StateDatabase::BZDB_SQUISHFACTOR	= std::string("_squishFactor");
 const std::string StateDatabase::BZDB_SYNCTIME	        = std::string("_syncTime");
 const std::string StateDatabase::BZDB_TANKANGVEL        = std::string("_tankAngVel");
 const std::string StateDatabase::BZDB_TANKEXPLOSIONSIZE = std::string("_tankExplosionSize");
